--- a/ebay.Infrastructure/ebay.Infrastructure.csproj
+++ b/ebay.Infrastructure/ebay.Infrastructure.csproj
@@ -2,6 +2,11 @@
   
   <ItemGroup>
     <ProjectReference Include="..\ebay.Domain\ebay.Domain.csproj" />
+    <ProjectReference Include="..\ebay.Application\ebay.Application.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
   
   <PropertyGroup>
