--- a/ebay.Api/appsettings.json
+++ b/ebay.Api/appsettings.json
@@ -13,6 +13,11 @@
   "ConnectionStrings": {
     "ConnectionString": "Server=103.97.125.207,1433;Database=eBayDB;User Id=dotnetcybersoft;Password=cybersoft321@;TrustServerCertificate=True;"
   },
+  "Cloudinary":{
+    "CloudName":"dgpw8giig",
+    "ApiKey":"546195174826672",
+    "ApiSecret":"QrWLG7wSRvgBuewt3PDxaMlhVhc"
+  },
   "AllowedHosts": "*"
 
 }
