--- a/ebay.Infrastructure/ebay.Infrastructure.csproj
+++ b/ebay.Infrastructure/ebay.Infrastructure.csproj
@@ -7,6 +7,7 @@
   
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.9" />
      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
