--- a/ebay.Api/appsettings.json
+++ b/ebay.Api/appsettings.json
@@ -14,9 +14,9 @@
     "ConnectionString": "Server=103.97.125.207,1433;Database=eBayDB;User Id=dotnetcybersoft;Password=cybersoft321@;TrustServerCertificate=True;"
   },
   "Cloudinary":{
-    "CloudName":"dgpw8giig",
-    "ApiKey":"546195174826672",
-    "ApiSecret":"QrWLG7wSRvgBuewt3PDxaMlhVhc"
+    "CloudName":"cloud_name",
+    "ApiKey":"api_key",
+    "ApiSecret":"api_secret"
   },
   "AllowedHosts": "*"
 
